Fix sonarQube issues